fix z-index for the title-tagline in the hero

--- a/web/themes/custom/crew/sass/components/_hero.scss
+++ b/web/themes/custom/crew/sass/components/_hero.scss
@@ -475,7 +475,7 @@
       .title-tagline {
         position: absolute;
         bottom: 0;
-        z-index: 99;
+        z-index: 1;
         display: block;
         width: 100%;
         background: linear-gradient(
